--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "projfrontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ayushsudhakar.github.io/ecomm",
   "dependencies": {
     "@stripe/stripe-js": "^1.11.0",
     "@testing-library/jest-dom": "^5.11.6",
@@ -16,7 +17,9 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "node server/server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
